@@ -1,6 +1,8 @@
 12.10.2014:
          - Reworked the PluginDialog to use a ui file and give more filter possibilities (rj)
          - Added [HOME] button to file open dialog (rj)
+         - Added QMessageBox warning about missing synths (rj)
+
 10.10.2014:
          - Don't allow changing the port of a soft synth, it makes no sense (rj)
 07.10.2014:
